# 1pride

./: .gitignore  1pride_brief.md  DEPLOY.md  README.md
app/: README.md
app/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
app/app/api/health/: route.ts
app/app/charts/: page.tsx
app/components/: CountUp.tsx  FadeIn.tsx  Intro.tsx  ScoringBars.tsx  Skeleton.tsx  SoundLayer.tsx  Sparkline.tsx  pixel-sprites.tsx
app/lib/: api.ts  sounds.ts
data/: .dockerignore  .env.example  Dockerfile  Procfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  schema.sql
data/notebooks/: 01-capstone-lions-2024-recap.ipynb  02-capstone-wr-scouting-card.ipynb  03-capstone-4th-down-analyzer.ipynb  04-capstone-draft-pick-value.ipynb
data/src/onepride_data/: __init__.py  api.py  db.py  load.py
site/: DEPLOY.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json  vercel.json
site/public/data/2025/: player_stats_2025.parquet  rosters_2025.parquet  (+1 more)
site/public/media/: lion-roar.webm
site/public/sounds/: CREDITS.md
site/scripts/: add-week.mjs
site/src/: content.config.ts
site/src/components/: Avatar.astro  CampbellTicker.astro  Challenge.astro  DepthChart.astro  DepthChartStrip.astro  FieldJourney.astro  FilmRoom.tsx  Hero.astro  Lesson.astro  LessonSection.astro  LevelIcon.astro  QuoteTicker.astro  Search.astro  Stadium.astro  StadiumSilhouette.astro  WallOfVoices.astro
site/src/data/: quotes.ts  tiers.ts
site/src/lib/: season.ts
site/src/pages/: 404.astro  search-index.json.ts
site/src/styles/: custom.css
(+80 files in other folders)
