[project]
name = "onepride-data"
version = "0.1.0"
description = "1PRIDE local data layer — nflverse ingestion into Postgres."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nfl-data-py>=0.3.3",
    "pandas>=2.2",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onepride_data"]

[tool.uv]
package = true
